--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         <a href="https://github.com/twbs/examples" class="btn btn-secondary">View on GitHub</a>
       </div>
     </div>
+    <div class="container">   
+
+        <a href="https://www.linkedin.com/in/your-linkedin-profile-url" class="btn btn-primary" target="_blank">
+          <i class="fa fa-linkedin"></i> LinkedIn
+        </a>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="main.js"></script>
