--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
  
 
-        <a href="https://www.linkedin.com/in/your-linkedin-profile-url" class="btn btn-primary" target="_blank">
+        <a href="www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-primary" target="_blank">
           <i class="fa fa-linkedin"></i> LinkedIn
         </a>
       </div>
