--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <i class="fa fa-google-drive"></i> Google Drive
           </a>
 
+          <a href="mailto:hannah.plate.2024@gmail.com" class="btn btn-primary">
+            <i class="fa fa-envelope"></i> Email Me
+          </a>
+      
+
       </div>
 
     
