--- a/index.html
+++ b/index.html
@@ -17,18 +17,21 @@
         
  
 
-        <a href="https://www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-primary btn-circle" target="_blank">
+        <a href="https://www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-primary" target="_blank">
           <i class="fa fa-linkedin"></i> LinkedIn
         </a>
 
-        <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary btn-circle" target="_blank">
+        <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary" target="_blank">
             <i class="fa fa-google-drive"></i> Google Drive
           </a>
 
-          <a href="mailto:hannah.plate.2024@gmail.com" class="btn btn-primary btn-circle">
+          <a href="mailto:hannah.plate.2024@gmail.com" class="btn btn-primary">
             <i class="fa fa-envelope"></i> Email Me
           </a>
       
+          <a href="https://github.com/hplate2003" class="btn btn-primary" target="_blank">
+            <i class="fa fa-github"></i> GitHub
+          </a>
 
       </div>
 
