--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </a>
 
         <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary" target="_blank">
-            <i class="fa fa-google-drive"></i> Google Drive
+            <i class="fa fa-google-drive"></i> Resume
           </a>
 
           <a href="mailto:hannah.plate.2024@gmail.com" class="btn btn-primary">
-            <i class="fa fa-envelope"></i> Email Me
+            <i class="fa fa-envelope"></i> Email
           </a>
       
           <a href="https://github.com/hplate2003" class="btn btn-primary" target="_blank">
