Add My Project Section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <i class="fa fa-github"></i> GitHub
           </a>
 
+
+          <p class="fs-5">My Projects</p>
+
       </div>
 
     
