changed color of buttons

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
         
  
 
-        <a href="https://www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-primary" target="_blank">
+        <a href="https://www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-dark" target="_blank">
           <i class="fa fa-linkedin"></i> LinkedIn
         </a>
 
-        <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary" target="_blank">
+        <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
             <i class="fa fa-google-drive"></i> Resume
           </a>
 
-          <a href="mailto:hannah.plate.2024@gmail.com" class="btn btn-primary">
+          <a href="mailto:hannah.plate.2024@gmail.com" class="btn btn-dark">
             <i class="fa fa-envelope"></i> Email
           </a>
       
-          <a href="https://github.com/hplate2003" class="btn btn-primary" target="_blank">
+          <a href="https://github.com/hplate2003" class="btn btn-dark" target="_blank">
             <i class="fa fa-github"></i> GitHub
           </a>
 
 
-          <p class="fs-8">My Projects</p>
+          <p class="fs-5">My Projects</p>
 
       </div>
 
