--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                     Characteristics on Crime
                     Rates in the United States</h5>
                 <p class="card-text">Access my files and folders.</p>
-                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary" target="_blank">
-                  <i class="fa fa-google-drive"></i> Go to Drive
+                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                  <i class="fa fa-google-drive"></i> Final Project Zip
                 </a>
-                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary" target="_blank">
-                    <i class="fa fa-google-drive"></i> Go to Drive
+                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Final Report
                   </a>
-                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary" target="_blank">
-                    <i class="fa fa-google-drive"></i> Go to Drive
+                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Presentation
                   </a>
-                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-primary" target="_blank">
-                    <i class="fa fa-google-drive"></i> Go to Drive
+                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Excel File
                   </a>
               </div>
             </div>
