--- a/index.html
+++ b/index.html
@@ -62,6 +62,55 @@
             </div>
           </div>
 
+          <div class="container">
+            <div   
+         class="card">
+              <div class="card-body">
+                <h5 class="card-title">Understanding the Impact of
+                    Different Socioeconomic
+                    Characteristics on Crime
+                    Rates in the United States</h5>
+                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                  <i class="fa fa-google-drive"></i> Final Report
+                </a>
+                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Final Project Zip
+                  </a>
+                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Presentation
+                  </a>
+                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Excel File
+                  </a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="container">
+            <div   
+         class="card">
+              <div class="card-body">
+                <h5 class="card-title">Understanding the Impact of
+                    Different Socioeconomic
+                    Characteristics on Crime
+                    Rates in the United States</h5>
+                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                  <i class="fa fa-google-drive"></i> Final Report
+                </a>
+                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Final Project Zip
+                  </a>
+                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Presentation
+                  </a>
+                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-dark" target="_blank">
+                    <i class="fa fa-google-drive"></i> Excel File
+                  </a>
+              </div>
+            </div>
+          </div>
+
       </div>
 
     
