--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <p class="fs-5">Information Systems Major & Marketing Minor</p>
         
  
+        <a href="mailto:your_email_address" class="btn btn-primary btn-circle">
+            <i class="fa fa-envelope"></i>
+          </a>
 
         <a href="https://www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-dark" target="_blank">
           <i class="fa fa-linkedin"></i> LinkedIn
