--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
  
         <a href="mailto:your_email_address" class="btn btn-primary btn-circle">
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-envelope-circle"></i>
           </a>
 
         <a href="https://www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-dark" target="_blank">
