--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
           </div>
 
           <div class="container">
+            <div class="card mb-3">
+              </div>
+            <div class="card mb-3">
+              </div>
+            <div class="card">
+              </div>
+          </div>
+
+          <div class="container">
             <div   
          class="card">
               <div class="card-body">
