--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="col-lg-8 px-0">
         <p class="fs-5">Information Systems Major & Marketing Minor</p>
         
- 
+        <div style="text-align: center;">
+            This text will be centered.
+          </div>
     
 
         <a href="https://www.linkedin.com/in/hannah-plate-8a6120244" class="btn btn-dark" target="_blank">
