--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div class="card-body">
                 <h5 class="card-title">Fitness Tracker Web Application Concept</h5>
                 <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
-                  <i class="fa fa-google-drive"></i> Final Report
+                  <i class="fa fa-google-drive"></i> Concept
                 </a>
                 
               </div>
