--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     Different Socioeconomic
                     Characteristics on Crime
                     Rates in the United States</h5>
+                  </div>
+                  <div class="card outline-primary">
+                    </div>
                 <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
                   <i class="fa fa-google-drive"></i> Final Report
                 </a>
@@ -74,8 +77,7 @@
                   <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
                     <i class="fa fa-google-drive"></i> Excel File
                   </a>
-                </div>
-                <div class="card outline-ligths">
+              
               </div>
             </div>
           </div>
