--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 
 
-    <div class="container my-5">
+    <div class="container">
       <h1>Hannah Plate</h1>
       <div class="col-lg-8 px-0">
     <p class="fs-5">Information Systems Major & Marketing Minor</p>
