--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
 
 
-    <div class="container">
+    <div class="container my-5">
       <h1>Hannah Plate</h1>
-      <div class="col-lg-8 px-0">
+      <div class="col-lg-8">
     <p class="fs-5">Information Systems Major & Marketing Minor</p>
         
 
