--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container my-5">
       <h1>Hannah Plate</h1>
-      <div class="col-lg-8">
+      <div class="col-lg-8 px-0">
     <p class="fs-5">Information Systems Major & Marketing Minor</p>
         
 
