--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
           <div class="container">
             <div   
          class="card">
+         <div class="card outline-primary mb-3">
+         </div>
               <div class="card-body">
                 <h5 class="card-title">Understanding the Impact of
                     Different Socioeconomic
