--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="container">
             <div   
          class="card">
-         <div class="card outline-primary mb-3">
+         <div class="card outline-light mb-3">
          </div>
               <div class="card-body">
                 <h5 class="card-title">Understanding the Impact of
