--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
 
 
 
-
-
-
-
-
-
           <p class="fs-5">My Projects</p>
 
 
@@ -92,8 +86,8 @@
          class="card">
               <div class="card-body">
                 <h5 class="card-title">Fitness Tracker Web Application Concept</h5>
-                <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
-                  <i class="fa fa-google-drive"></i> Concept
+                <a href="https://github.com/hplate2003/Fitness-App" class="btn btn-light" target="_blank">
+                  <i class="fa fa-github"></i></i> Concept
                 </a>
                 
               </div>
