--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
                 <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
                     <i class="fa fa-google-drive"></i> Final Project Zip
                   </a>
-                  <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
-                    <i class="fa fa-google-drive"></i> Presentation
+                  <a href="file:///Users/hannahplate/Downloads/ISYS%20Group%20Project%20(3).pdf" class="btn btn-primary">
+                    Download PDF
+                  </a>" class="btn btn-light">
+                    Presentation
                   </a>
                   <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
                     <i class="fa fa-google-drive"></i> Excel File
