--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
 
-    <a href="https://drive.google.com/drive/folders/your_google_drive_folder_id" class="btn btn-light" target="_blank">
-      <i class="fa fa-google-drive"></i> Resume
+    <a href="https://drive.google.com/file/d/1MtK1FTxpvYMnMhgwEInenIrC3DjE-e85/view?usp=sharing" class="btn btn-light" target="_blank">
+      <i class="fa fa-file"></i> Resume
     </a>
 
     <a href="mailto:hannah.plate.2024@gmail.com" class="btn btn-light">
