--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                 <a href="https://drive.google.com/file/d/1g_ptf7jPR7D-sPoxx9gGxdq7Ql0KgtiQ/view?usp=sharing" class="btn btn-light" target="_blank">
                   <i class="fa fa-google-drive"></i> Excel Module D
                 </a>
+                <a href="https://drive.google.com/file/d/1mY6lbe9BoFGE3UdXrnX8xEH8JdKeOWQX/view?usp=sharing" class="btn btn-light" target="_blank">
+                  <i class="fa fa-google-drive"></i> Excel Module E
+                </a>
                 
               </div>
             </div>
