--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
             <div   
          class="card">
               <div class="card-body">
-                <h5 class="card-title">Understanding the Impact of
-                    Different Socioeconomic
-                    Characteristics on Crime
-                    Rates in the United States</h5>
+                <h5 class="card-title">Business Intelligence Project</h5>
                 <a href="https://drive.google.com/file/d/1XakmKbopRCINVr9CjtAIEiFhZEixvxJ0/view?usp=sharing" class="btn btn-light" target="_blank">
                   <i class="fa fa-google-drive"></i> Final Report
                 </a>
@@ -77,7 +74,7 @@
             <div   
          class="card">
               <div class="card-body">
-                <h5 class="card-title">Fitness Tracker Web Application Concept</h5>
+                <h5 class="card-title">Fitness Tracker Front-End Concept</h5>
                 <a href="https://github.com/hplate2003/Fitness-App" class="btn btn-light" target="_blank">
                   <i class="fa fa-github"></i></i> Concept
                 </a>
@@ -96,7 +93,7 @@
             <div   
          class="card">
               <div class="card-body">
-                <h5 class="card-title">TA Excel Module Presentations</h5>
+                <h5 class="card-title">TA Excel Module PowerPoint Presentations</h5>
                 <a href="https://drive.google.com/file/d/1nLQA8emFAjtNPTmpItWDQ0hGgUGUo1Gw/view?usp=sharing" class="btn btn-light" target="_blank">
                   <i class="fa fa-google-drive"></i> Excel Module A
                 </a>
