Update TA Presentations

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
          class="card">
               <div class="card-body">
                 <h5 class="card-title">TA Excel Module PowerPoint Presentations</h5>
-                <a href="https://drive.google.com/file/d/1nLQA8emFAjtNPTmpItWDQ0hGgUGUo1Gw/view?usp=sharing" class="btn btn-light" target="_blank">
+                <a href="https://drive.google.com/file/d/1EvVAUp-WZ0GJVfP-SBSA1dB2zNz-sl-C/view?usp=sharing" class="btn btn-light" target="_blank">
                   <i class="fa fa-google-drive"></i> Excel Module A
                 </a>
-                <a href="https://drive.google.com/file/d/1xQBWwbc2UuLpmxHjwxA3H7vkED_YcP-i/view?usp=sharing" class="btn btn-light" target="_blank">
+                <a href="https://drive.google.com/file/d/1xf634hj38U9KLomEn4J6x-zflwklQ18k/view?usp=sharing" class="btn btn-light" target="_blank">
                   <i class="fa fa-google-drive"></i> Excel Module B
                 </a>
                 <a href="https://drive.google.com/file/d/1I2u6beHrGJUHRM3B6fsND3ThhEzKkMNr/view?usp=sharing" class="btn btn-light" target="_blank">
@@ -108,6 +108,9 @@
                 </a>
                 <a href="https://drive.google.com/file/d/1mY6lbe9BoFGE3UdXrnX8xEH8JdKeOWQX/view?usp=sharing" class="btn btn-light" target="_blank">
                   <i class="fa fa-google-drive"></i> Excel Module E
+                </a>
+                <a href="https://drive.google.com/file/d/1O9HvtxExJb_F5awBvEQ_AUrYNZIWQ8ij/view?usp=sharing" class="btn btn-light" target="_blank">
+                  <i class="fa fa-google-drive"></i> Excel Module F
                 </a>
                 
               </div>
